Feat: Implement quest system