@@ -1,54 +1,46 @@
 package fr.ludos.game.alien;
 
-import java.util.Optional;
-import java.util.Iterator;
 import java.time.Duration;
 import java.util.Arrays;
-import java.util.List;
-import java.util.Set;
 import java.util.HashSet;
-import java.util.UUID;
+import java.util.List;
 import java.util.Random;
+import java.util.Set;
+import java.util.UUID;
 import java.util.stream.Collectors;
+
 import javax.annotation.Nullable;
+
 import org.apache.commons.lang3.EnumUtils;
-
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.TextComponent;
-import net.kyori.adventure.text.format.NamedTextColor;
-import net.kyori.adventure.title.Title;
-
 import org.bukkit.Bukkit;
-import org.bukkit.Location;
 import org.bukkit.GameMode;
+import org.bukkit.Location;
 import org.bukkit.World;
 import org.bukkit.WorldBorder;
-import org.bukkit.configuration.file.FileConfiguration;
-import org.bukkit.scheduler.BukkitRunnable;
-import org.bukkit.scheduler.BukkitTask;
 import org.bukkit.attribute.Attribute;
+import org.bukkit.command.Command;
+import org.bukkit.command.CommandSender;
+import org.bukkit.configuration.file.FileConfiguration;
+import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandSender;
-import org.bukkit.advancement.Advancement;
-import org.bukkit.advancement.AdvancementProgress;
-import org.bukkit.scoreboard.Scoreboard;
-import org.bukkit.inventory.ItemStack;
 import org.bukkit.plugin.java.JavaPlugin;
-import org.bukkit.entity.EntityType;
-import org.bukkit.entity.Player;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
+import org.bukkit.scheduler.BukkitRunnable;
+import org.bukkit.scheduler.BukkitTask;
+import org.bukkit.scoreboard.Scoreboard;
 
-import fr.ludos.Ludos;
 import fr.ludos.Utility;
 import fr.ludos.command.CommandUtility;
 import fr.ludos.game.Game;
 import fr.ludos.game.GameAreaController;
 import fr.ludos.game.GameTeamController;
-import fr.ludos.game.alien.AlienMonster;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.TextComponent;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.title.Title;
 
 public class AlienGame extends Game {
 	public static final String id = "alien";
@@ -75,45 +67,58 @@ public class AlienGame extends Game {
 	public static final String spawnLocationKey = "spawnLocation";
 	public static final String spawnLocationPath = id + '.' + spawnLocationKey;
 
-	private final Scoreboard scoreboard;
+	public static final String alienSpawnDistanceKey = "alienSpawnDistance";
+	public static final String alienSpawnDistancePath = id + '.' + alienSpawnDistanceKey;
 
+	private final Scoreboard scoreboard;
+	private final AlienTeamController teamController;
+	private final AlienAreaController areaController;
+	private final AlienTimer timer;
+	private final Builder builder;
+
+	private AlienMonster alien;
+	private AlienQuestManager questManager;
+
+	private BukkitTask saturationTask;
+
+	@Override
 	public Scoreboard getScoreboard() {
 		return this.scoreboard;
 	}
-
-	private final AlienTeamController teamController;
 
 	@Override
 	public AlienTeamController getTeamController() {
 		return this.teamController;
 	}
 
-	private final AlienTimer timer;
+	@Override
+	public AlienTeamController getGameTeamController() {
+		return this.teamController;
+	}
 
-	private AlienMonster alien;
+	@Override
+	public AlienAreaController getGameAreaController() {
+		return this.areaController;
+	}
 
-	private final Builder builder;
+	public AlienTimer getAlienTimer() {
+		return this.timer;
+	}
+
+	public AlienMonster getAlien() {
+		return alien;
+	}
 
 	public Builder getAlienBuilder() {
 		return this.builder;
 	}
 
-	private Player prey;
-	private Set<Player> hunters;
-
-	private WorldBorder border;
-
-	private Location lastPreyLocation = null;
-	private BukkitTask actionBarTask;
-
-	private BukkitTask saturationTask;
-
 	@Nullable
 	public static UUID getBorderWorldUID(JavaPlugin plugin) {
 		String value = plugin.getConfig().getString(borderWorldUUIDPath);
-
-		if (value == null)
+		if (value == null) {
 			return null;
+		}
 		return UUID.fromString(value);
 	}
 
@@ -128,6 +133,7 @@ public class AlienGame extends Game {
 
 	public static void setCachedBorder(World world, JavaPlugin plugin) {
 		FileConfiguration config = plugin.getConfig();
+
 		if (world == null) {
 			config.set(borderWorldUUIDPath, null);
 			config.set(borderLocationPath, null);
@@ -145,11 +151,19 @@ public class AlienGame extends Game {
 
 	public static void resetBorder(JavaPlugin plugin) {
 		Location location = AlienGame.getBorderLocation(plugin);
-		if (location == null)
+		if (location == null) {
 			return;
-		World world = Bukkit.getWorld(AlienGame.getBorderWorldUID(plugin));
-		if (world == null)
+		}
+
+		UUID worldUid = AlienGame.getBorderWorldUID(plugin);
+		if (worldUid == null) {
 			return;
+		}
+
+		World world = Bukkit.getWorld(worldUid);
+		if (world == null) {
+			return;
+		}
 
 		double size = AlienGame.getBorderSize(plugin);
 		WorldBorder border = world.getWorldBorder();
@@ -163,118 +177,95 @@ public class AlienGame extends Game {
 		super(builder);
 
 		this.builder = builder;
-
 		this.scoreboard = Bukkit.getServer().getScoreboardManager().getMainScoreboard();
 		this.teamController = new AlienTeamController(this, builder.getChosenPlayers(), builder.getChosenPrey());
-
-		timer = new AlienTimer(this, builder.getReveal());
+		this.areaController = new AlienAreaController(this, builder.getLocation());
+		this.timer = new AlienTimer(this, builder.getReveal());
 	}
 
 	@Override
 	protected void onGameInit() {
-		// Player prey = teamController.getSelectedPrey();
-		// if (prey == null) {
-		// throw new IllegalStateException("Prey player is null");
-		// }
+		Location base = builder.getSpawnLocation();
+		if (base == null) {
+			Player anchor = teamController.getSelectedPrey();
+			if (anchor == null) {
+				throw new IllegalStateException("No player available to initialize Alien game.");
+			}
+			base = anchor.getLocation();
+		}
 
-		// Location gameLocation = prey.getLocation();
-		// areaController.setup(gameLocation);
+		areaController.setup(base);
 	}
 
 	@Override
 	protected void onGameStart() {
 		timer.start();
 
-		// Envoyer le titre à la proie
-		prey.showTitle(Title.title(
-				Component.text("The alien tracks you"),
-				Component.text("Run for your life"),
-				Title.Times.times(
-						Duration.ofMillis(500),
-						Duration.ofMillis(3500),
-						Duration.ofMillis(1000))));
+		Location teamSpawn = builder.getSpawnLocation();
+		if (teamSpawn == null) {
+			teamSpawn = areaController.getCenter();
+		}
+		teamSpawn = areaController.constrain(teamSpawn);
 
-		// Envoyer le même titre à tous les chasseurs
-		for (Player hunter : hunters) {
-			hunter.showTitle(Title.title(
-					Component.text("The alien tracks you"),
-					Component.text("Run for your life"),
+		Random rnd = new Random();
+		int index = 0;
+		for (Player player : teamController.getAllPlayers()) {
+			Location tp = teamSpawn.clone();
+			tp.setX(tp.getX() + (index % 2 == 0 ? 1 : -1) * rnd.nextInt(0, 2));
+			tp.setZ(tp.getZ() + ((index / 2) % 2 == 0 ? 1 : -1) * rnd.nextInt(0, 2));
+			tp.setY(tp.getWorld().getHighestBlockYAt(tp.getBlockX(), tp.getBlockZ()) + 1);
+
+			player.teleport(tp);
+			player.setBedSpawnLocation(tp, true);
+			player.setGameMode(GameMode.SURVIVAL);
+			player.setHealth(player.getAttribute(Attribute.GENERIC_MAX_HEALTH).getValue());
+			player.getInventory().clear();
+			player.addPotionEffect(new PotionEffect(PotionEffectType.SATURATION, 20 * 30, 0, false, false));
+			index++;
+		}
+
+		for (Player player : teamController.getAllPlayers()) {
+			player.showTitle(Title.title(
+					Component.text("The Alien tracks you"),
+					Component.text("Survive together"),
 					Title.Times.times(
 							Duration.ofMillis(500),
 							Duration.ofMillis(3500),
 							Duration.ofMillis(1000))));
 		}
 
-		AlienLocationOptions locationOption = builder.getLocation();
-		Location origin;
-
-		if (builder.getSpawnLocation() != null) {
-			// If a spawn location is configured, teleport all players there and use it as
-			// origin
-			origin = builder.getSpawnLocation();
-
-			// Teleport prey and hunters to spawn with small offsets to avoid stacking
-			Random rnd = new Random();
-			int i = 0;
-			for (Player p : Bukkit.getOnlinePlayers()) {
-				Location tp = origin.clone();
-				// spread players by a few blocks
-				tp.setX(tp.getX() + (i % 2 == 0 ? 1 : -1) * (1 + rnd.nextInt(2)));
-				tp.setZ(tp.getZ() + ((i / 2) % 2 == 0 ? 1 : -1) * (1 + rnd.nextInt(2)));
-				tp.setY(tp.getWorld().getHighestBlockYAt(tp.getBlockX(), tp.getBlockZ()) + 1);
-				p.teleport(tp);
-				p.setGameMode(GameMode.SURVIVAL);
-				p.setHealth(Math.min(p.getAttribute(Attribute.GENERIC_MAX_HEALTH).getValue(), p.getHealth()));
-				i++;
-			}
-		} else {
-			origin = prey.getLocation();
-			if (locationOption == AlienLocationOptions.random) {
-				origin = Utility.getGroundedLocationAround(origin, 300, 2500, origin);
-			}
-		}
-
-		// For testing: spawn the alien near the players (2 to 6 blocks from origin)
-		Location alienSpawnLocation = Utility.getGroundedLocationAround(origin, 10, 10, origin);
+		Location alienSpawnLocation = areaController.pickAlienSpawn(teamSpawn, builder.getAlienSpawnDistance());
 		alien = AlienMonster.spawn(this, alienSpawnLocation);
+		if (alien == null) {
+			throw new IllegalStateException("Could not spawn alien.");
+		}
+		alien.startAI();
 
-		prey.getWorld().setTime(1000);
+		questManager = new AlienQuestManager(this);
+		questManager.start();
 
-		actionBarTask = new BukkitRunnable() {
-			@Override
-			public void run() {
-				if (lastPreyLocation == null)
-					return;
-
-				for (Player player : Bukkit.getOnlinePlayers()) {
-					player.sendActionBar(
-							Component.text("Prey's location:")
-									.append(Component.text(" X:" + lastPreyLocation.getBlockX())
-											.color(NamedTextColor.RED))
-									.append(Component.text(" Y:" + lastPreyLocation.getBlockY())
-											.color(NamedTextColor.GREEN))
-									.append(Component.text(" Z:" + lastPreyLocation.getBlockZ())
-											.color(NamedTextColor.BLUE)));
-				}
-			}
-		}.runTaskTimer(getPlugin(), 1, 1);
+		teamSpawn.getWorld().setTime(18000);
 
 		saturationTask = new BukkitRunnable() {
 			@Override
 			public void run() {
-				for (Player hunter : hunters) {
-					hunter.addPotionEffect(new PotionEffect(PotionEffectType.SATURATION, 1, 0, true, false));
+				for (Player player : teamController.getAllPlayers()) {
+					player.addPotionEffect(new PotionEffect(PotionEffectType.SATURATION, 1, 0, true, false));
 				}
-				prey.addPotionEffect(new PotionEffect(PotionEffectType.SATURATION, 1, 0, true, false));
 			}
 		}.runTaskTimer(getPlugin(), 400, 400);
 
-		Bukkit.getServer().broadcast(Component.text("The Game of Alien started"));
+		Bukkit.broadcast(Component.text("The Game of Alien started").color(NamedTextColor.RED));
 	}
 
 	@Override
 	protected void onGameStop() {
 		timer.stop();
+
+		if (questManager != null) {
+			questManager.stop();
+			questManager = null;
+		}
 
 		if (alien != null) {
 			alien.despawn();
@@ -283,60 +274,67 @@ public class AlienGame extends Game {
 
 		resetBorder(getPlugin());
 
-		if (actionBarTask != null) {
-			actionBarTask.cancel();
-			actionBarTask = null;
-		}
-
 		if (saturationTask != null) {
 			saturationTask.cancel();
 			saturationTask = null;
 		}
 
-		Bukkit.getServer().broadcast(Component.text("The Game of Alien ended"));
+		Bukkit.broadcast(Component.text("The Game of Alien ended").color(NamedTextColor.RED));
+	}
+
+	public void onAllQuestsCompleted() {
+		if (alien != null) {
+			alien.killInstantly();
+		}
+
+		for (Player player : teamController.getAllPlayers()) {
+			player.showTitle(Title.title(
+					Component.text("Victory").color(NamedTextColor.GREEN),
+					Component.text("All quests completed"),
+					Title.Times.times(
+							Duration.ofMillis(300),
+							Duration.ofMillis(3000),
+							Duration.ofMillis(800))));
+		}
+
+		Bukkit.broadcast(
+				Component.text("All quests completed! The Alien has been destroyed!").color(NamedTextColor.GREEN));
+
+		new BukkitRunnable() {
+			@Override
+			public void run() {
+				Game.stopCurrentGame();
+			}
+		}.runTaskLater(getPlugin(), 40L);
 	}
 
 	@EventHandler
 	public void onPlayerJoin(PlayerJoinEvent event) {
-		Set<Player> hunters = teamController.getTeamHunters();
-		Player prey = teamController.getTeamPrey();
-
-		if (hunters.isEmpty() || prey == null) {
-			timer.resume();
+		if (!isStarted()) {
 			return;
 		}
 
-		var player = event.getPlayer();
-
-		if (!hunters.contains(player) && player != prey) {
+		Player player = event.getPlayer();
+		if (!teamController.getAllPlayers().contains(player)) {
 			player.setGameMode(GameMode.SPECTATOR);
-
-			player.teleport(prey.getLocation());
+			player.teleport(areaController.getCenter());
 		}
 	}
 
 	@EventHandler
 	public void onPlayerQuit(PlayerQuitEvent event) {
-		Player player = event.getPlayer();
-
-		var hunters = teamController.getTeamHunters();
-		if (hunters.contains(player)) {
-			hunters.remove(player);
+		if (!isStarted()) {
+			return;
 		}
 
-		var prey = teamController.getTeamPrey();
-
-		if (hunters.isEmpty() || prey == null) {
-			timer.pause();
+		if (teamController.getLivingPlayers().isEmpty()) {
+			Bukkit.broadcast(Component.text("All players left the Alien game."));
+			Game.stopCurrentGame();
 		}
 	}
 
 	@Override
 	public Boolean canPlayerHaveRole(Player player, String roleId) {
-		// if (teamController.preyTeam.getEntries().contains(player.getName())) {
-		// return false;
-		// }
-
 		return true;
 	}
 
@@ -345,10 +343,11 @@ public class AlienGame extends Game {
 		private static final String randomOption = "random";
 
 		public static final List<String> locationOptions = Arrays.stream(AlienLocationOptions.values())
-				.map(v -> v.toString())
+				.map(AlienLocationOptions::toString)
 				.collect(Collectors.toList());
+
 		public static final List<String> revealOptions = Arrays.stream(AlienRevealOptions.values())
-				.map(v -> v.toString())
+				.map(AlienRevealOptions::toString)
 				.collect(Collectors.toList());
 
 		public String getPreyName() {
@@ -356,44 +355,43 @@ public class AlienGame extends Game {
 		}
 
 		public void setPreyName(String prey) {
-			String value = prey == null ? null : prey;
-			getPlugin().getConfig().set(preyPath, value);
+			getPlugin().getConfig().set(preyPath, prey);
 			getPlugin().saveConfig();
 		}
 
 		public Set<String> getPlayerNames() {
-			return getPlugin().getConfig().getStringList(playersPath).stream()
-					.collect(Collectors.toSet());
+			return getPlugin().getConfig().getStringList(playersPath).stream().collect(Collectors.toSet());
 		}
 
 		public void setPlayerNames(Set<String> players) {
-			List<String> value = players == null ? null : players.stream().collect(Collectors.toList());
+			List<String> value = players == null ? null : players.stream().toList();
 			getPlugin().getConfig().set(playersPath, value);
 			getPlugin().saveConfig();
 		}
 
 		public AlienLocationOptions getLocation() {
 			String locationString = getPlugin().getConfig().getString(locationPath);
-			return Arrays.stream(AlienLocationOptions.values()).filter(o -> o.toString().equals(locationString))
+			return Arrays.stream(AlienLocationOptions.values())
+					.filter(o -> o.toString().equals(locationString))
 					.findFirst()
-					.orElse(AlienLocationOptions.random);
+					.orElse(AlienLocationOptions.here);
 		}
 
 		public void setLocation(AlienLocationOptions location) {
-			String value = location == null ? null : location.toString();
-			getPlugin().getConfig().set(locationPath, value);
+			getPlugin().getConfig().set(locationPath, location == null ? null : location.toString());
 			getPlugin().saveConfig();
 		}
 
 		public AlienRevealOptions getReveal() {
 			String revealString = getPlugin().getConfig().getString(revealPath);
-			return Arrays.stream(AlienRevealOptions.values()).filter(o -> o.toString().equals(revealString)).findFirst()
+			return Arrays.stream(AlienRevealOptions.values())
+					.filter(o -> o.toString().equals(revealString))
+					.findFirst()
 					.orElse(AlienRevealOptions.three_minutes);
 		}
 
 		public void setReveal(AlienRevealOptions reveal) {
-			String value = reveal == null ? null : reveal.toString();
-			getPlugin().getConfig().set(revealPath, value);
+			getPlugin().getConfig().set(revealPath, reveal == null ? null : reveal.toString());
 			getPlugin().saveConfig();
 		}
 
@@ -406,23 +404,31 @@ public class AlienGame extends Game {
 			getPlugin().saveConfig();
 		}
 
+		public int getAlienSpawnDistance() {
+			return Math.max(1, getPlugin().getConfig().getInt(alienSpawnDistancePath, 10));
+		}
+
+		public void setAlienSpawnDistance(int distance) {
+			getPlugin().getConfig().set(alienSpawnDistancePath, Math.max(1, distance));
+			getPlugin().saveConfig();
+		}
+
 		public Builder(JavaPlugin plugin) {
 			super(plugin);
-
 			resetBorder(plugin);
 		}
 
 		@Nullable
 		public Set<Player> getChosenPlayers() {
 			Set<String> playerNames = this.getPlayerNames();
-			if (playerNames.isEmpty())
+			if (playerNames.isEmpty()) {
 				return null;
+			}
 
-			return new HashSet<>(
-					playerNames.stream()
-							.map(Bukkit::getPlayerExact)
-							.filter(p -> p != null)
-							.collect(Collectors.toSet()));
+			return new HashSet<>(playerNames.stream()
+					.map(Bukkit::getPlayerExact)
+					.filter(p -> p != null)
+					.collect(Collectors.toSet()));
 		}
 
 		@Nullable
@@ -436,14 +442,12 @@ public class AlienGame extends Game {
 
 		public String getPlayersString() {
 			Set<String> playerNames = this.getPlayerNames();
-			return playerNames.isEmpty() ? "All"
-					: playerNames.stream() // TODO: Translate
-							.collect(Collectors.joining(" "));
+			return playerNames.isEmpty() ? "All" : playerNames.stream().collect(Collectors.joining(" "));
 		}
 
 		public String getPreyString() {
 			String preyName = this.getPreyName();
-			return preyName == null ? "Random" : preyName; // TODO: Translate
+			return preyName == null ? "Random" : preyName;
 		}
 
 		@Override
@@ -453,25 +457,21 @@ public class AlienGame extends Game {
 
 		@Override
 		public TextComponent getDisplayName() {
-			return Component.text("Alien")
-					.color(NamedTextColor.RED);
+			return Component.text("Alien").color(NamedTextColor.RED);
 		}
 
 		@Override
 		public TextComponent getDescription() {
-			return Component.text("A game of hide and seek.\n" +
-					"As the Prey, survive for as long as possible, while the Hunters try to find you.\n" +
-					"The Hunters possess a Compass that will update regularly to point at the Prey's position.");
+			return Component.text("Survive together against an invincible Alien.\n" +
+					"Complete all quests to destroy it and win.");
 		}
 
+		@Override
 		public String getGameConfigUsage(CommandSender sender, Command command, String label) {
 			StringBuilder usage = new StringBuilder("/" + label + " game " + getId() + " config <config> [value]");
-
 			for (AlienGameConfigs config : AlienGameConfigs.values()) {
-				usage.append("\n  ").append(config.toString()).append(" ")
-						.append(config.getUsage());
+				usage.append("\n  ").append(config.toString()).append(" ").append(config.getUsage());
 			}
-
 			return usage.toString();
 		}
 
@@ -482,10 +482,14 @@ public class AlienGame extends Game {
 			}
 
 			String arg = args[0];
-			AlienGameConfigs option = Arrays.stream(AlienGameConfigs.values()).filter(o -> o.toString().equals(arg))
-					.findFirst().orElse(null);
-			if (option == null)
+			AlienGameConfigs option = Arrays.stream(AlienGameConfigs.values())
+					.filter(o -> o.toString().equals(arg))
+					.findFirst()
+					.orElse(null);
+
+			if (option == null) {
 				return false;
+			}
 
 			return handleConfigsCommand(sender, command, label, Arrays.copyOfRange(args, 1, args.length), option);
 		}
@@ -495,93 +499,97 @@ public class AlienGame extends Game {
 			switch (config) {
 				case players:
 					if (args.length == 0) {
-						// Field is left empty, send the current config
 						sender.sendMessage(getPlayersString());
 						return true;
 					}
-
 					if (args[0].equalsIgnoreCase(allOption)) {
-						// Reset to default option
 						setPlayerNames(null);
-
-						sender.sendMessage("All players included in the game"); // TODO: Translate
+						sender.sendMessage("All players included in the game");
 						return true;
 					}
-
 					setPlayerNames(new HashSet<>(Arrays.asList(args)));
-
 					sender.sendMessage(getPlayersString());
 					return true;
 
 				case prey:
 					if (args.length == 0) {
-						// Field is left empty, send the current config
 						sender.sendMessage(getPreyString());
 						return true;
 					}
-
 					String givenPreyName = args[0];
-
 					if (givenPreyName.equalsIgnoreCase(randomOption)) {
-						// Reset to default option
 						setPreyName(null);
-
-						sender.sendMessage("Prey player set to Random"); // TODO: Translate
+						sender.sendMessage("Prey player set to Random");
 						return true;
 					}
-
 					setPreyName(givenPreyName);
-
 					sender.sendMessage(getPreyString());
 					return true;
 
 				case location:
 					if (args.length == 0) {
-						// Field is left empty, send the current config
 						sender.sendMessage(this.getLocation().toString());
 						return true;
 					}
-
 					String givenLocation = args[0];
 					AlienLocationOptions locationOption = Arrays.stream(AlienLocationOptions.values())
-							.filter(o -> o.toString().equals(givenLocation)).findFirst().orElse(null);
-					if (locationOption == null)
+							.filter(o -> o.toString().equals(givenLocation))
+							.findFirst()
+							.orElse(null);
+					if (locationOption == null) {
 						return false;
-
+					}
 					setLocation(locationOption);
-
-					sender.sendMessage("Game location set to " + locationOption.toString()); // TODO: Translate
+					sender.sendMessage("Game location set to " + locationOption);
 					return true;
 
 				case spawn:
-					// spawn command: no args -> show current; 'here' -> set to sender's location
-					// (player only)
 					if (args.length == 0) {
 						Location loc = this.getSpawnLocation();
-						if (loc == null) {
-							sender.sendMessage("Spawn location not set");
-						} else {
-							sender.sendMessage("Spawn location: " + loc.toString());
-						}
+						sender.sendMessage(loc == null ? "Spawn location not set" : "Spawn location: " + loc);
 						return true;
 					}
-
-					String arg0 = args[0];
-					if (arg0.equalsIgnoreCase("here")) {
-						if (!(sender instanceof Player)) {
+					if (args[0].equalsIgnoreCase("here")) {
+						if (!(sender instanceof Player player)) {
 							sender.sendMessage("You must be a player to set spawn to here.");
 							return true;
 						}
-
-						Player player = (Player) sender;
-						Location loc = player.getLocation();
-						setSpawnLocation(loc);
+						setSpawnLocation(player.getLocation());
 						sender.sendMessage("Spawn location set to your current location.");
 						return true;
 					}
-
 					return false;
 
+				case reveal:
+					if (args.length == 0) {
+						sender.sendMessage(this.getReveal().toString());
+						return true;
+					}
+					String givenReveal = args[0];
+					AlienRevealOptions revealOption = Arrays.stream(AlienRevealOptions.values())
+							.filter(o -> o.toString().equals(givenReveal))
+							.findFirst()
+							.orElse(null);
+					if (revealOption == null) {
+						return false;
+					}
+					setReveal(revealOption);
+					sender.sendMessage("Alien timer set to " + revealOption);
+					return true;
+
+				case alien_spawn_distance:
+					if (args.length == 0) {
+						sender.sendMessage(String.valueOf(getAlienSpawnDistance()));
+						return true;
+					}
+					try {
+						int distance = Integer.parseInt(args[0]);
+						setAlienSpawnDistance(distance);
+						sender.sendMessage("Alien spawn distance set to " + getAlienSpawnDistance());
+						return true;
+					} catch (NumberFormatException e) {
+						return false;
+					}
 			}
 
 			return false;
@@ -590,9 +598,7 @@ public class AlienGame extends Game {
 		@Override
 		public List<String> gameConfigTabComplete(CommandSender sender, Command command, String label, String[] args) {
 			if (args.length <= 1) {
-				return Arrays.stream(AlienGameConfigs.values())
-						.map(AlienGameConfigs::toString)
-						.collect(Collectors.toList());
+				return Arrays.stream(AlienGameConfigs.values()).map(AlienGameConfigs::toString).toList();
 			}
 
 			String arg = args[0];
@@ -610,26 +616,26 @@ public class AlienGame extends Game {
 
 			switch (config) {
 				case players:
-					// Options are : any enumeration of players, or all players
 					if (args.length == 1) {
 						allPlayers.add(allOption);
 					}
 					return allPlayers;
 
 				case prey:
-					// Options are : any single player, or a random player
 					allPlayers.add(randomOption);
 					return allPlayers;
 
 				case location:
-					// Options are : random, here
 					return locationOptions;
+
 				case spawn:
-					// Options are : here
-					return Arrays.asList("here");
+					return List.of("here");
+
 				case reveal:
-					// Options are : short, medium, long
 					return revealOptions;
+
+				case alien_spawn_distance:
+					return List.of("10", "20", "30", "40");
 			}
 
 			return null;
@@ -639,17 +645,5 @@ public class AlienGame extends Game {
 		public AlienGame build() {
 			return new AlienGame(this);
 		}
-	}
-
-	@Override
-	public GameTeamController getGameTeamController() {
-		// TODO Auto-generated method stub
-		throw new UnsupportedOperationException("Unimplemented method 'getGameTeamController'");
-	}
-
-	@Override
-	public GameAreaController getGameAreaController() {
-		// TODO Auto-generated method stub
-		throw new UnsupportedOperationException("Unimplemented method 'getGameAreaController'");
 	}
 }
